<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="camera_change_text">翻转镜头</string>
    <string name="upload_file_text">本地上传</string>
    <string name="delete_record_text">删除</string>
    <string name="delete_record_verify_text">确认删除</string>
    <string name="record_init_text">拍%s秒</string>
    <string name="record_finish_text">完成</string>

    <string name="record_dialog_title">发布创作</string>
    <string name="record_dialog_cancel">取消</string>
    <string name="record_dialog_record">拍摄</string>
    <string name="record_dialog_upload">上传</string>
    <string name="record_dialog_live">直播</string>
    <string name="record_dialog_moment">动态</string>

    <string name="record_time_text">%1$.1f</string>
    <string name="record_time_text_default">0.0</string>

    <string name="cancel_record_title">放弃拍摄</string>
    <string name="cancel_record_text">当前视频将不会保存，是否放弃？</string>
    <string name="system_file">系统文件</string>
    <string name="choose_video_num">已选%1$d个视频</string>
    <string name="choose_video_time">共计%1$1.1f秒</string>
    <string name="choose_image_num">已选%1$d张图片</string>

    <string name="choose_finish">完成</string>
    <string name="select_choose">选择</string>
    <string name="select_cancel">取消</string>
    <string name="process_video_text">处理中，请稍候</string>
    <string name="video_limit_title">视频内容过长</string>
    <string name="video_limit_text">您选择的视频内容过长，请重新选择总时长为300s以内的视频</string>
    <string name="video_limit_ensure">确定</string>

    <string name="upload_video">发布视频</string>
    <string name="upload_video_default_text">请填写视频简介，让更多人了解您的作品…</string>
    <string name="upload_video_text">谁可以看</string>
    <string name="upload_video_public">公开</string>
    <string name="upload_video_private">私密</string>
    <string name="upload_video_button_text">发布</string>

    <string name="upload_moment_default_text">此刻，你想告诉陌生的TA..</string>

    <string name="fragment_profile_crop_error">图片保存失败</string>

    <string name="text_bold">bold</string>
    <string name="text_normal">normal</string>

    <string name="publish_wait_text">发布中，请稍等片刻…</string>
    <string name="publish_progress_text">%d%%</string>
    <string name="publish_progress_default_text">0%</string>

    <string name="publish_ensure">确定发布</string>
    <string name="save_local">保存本地</string>
    <string name="publish_ensure_title">温馨提示</string>
    <string name="publish_ensure_text">当前为非WIFI环境，上传发布视频作品会使用手机流量，请确认是否继续</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_fail">发布失败,请稍候重试</string>
    <string name="publish_network_fail">网络异常,请稍候重试</string>

    <string name="identify_ensure">去认证</string>
    <string name="identify_text">您的账号尚未完成实名认证，仅可发布自己的私密作品，完成实名认证可发布公开作品</string>
    <string name="identify_ing_text">您的实名账号尚在认证过程中，暂时仅可发布私密作品</string>
    <string name="live_identify_text">您的账号尚未完成实名认证，无法发起直播</string>

    <string name="publish">发布</string>
    <string name="is_publishing">正在发布…</string>
    <string name="publish_failed">发布失败</string>
    <string name="publish_hint">分享你的想法…</string>
    <string name="publish_qa_hint">补充说明\n详细描述问题，能获得更有效的解答</string>
    <string name="publish_qa_title_count">%s/50</string>
    <string name="publish_qa_title_hint">请输入问题\n精准简洁的概括问题，更易获得针对性解答</string>
    <string name="publish_qa_title_hint_last">精准简洁的概括问题，更易获得针对性解答</string>
    <string name="publish_additional_notes">补充说明</string>
    <string name="publish_disable_pic_because_audio">选择语音后不可以选择图片内容</string>
    <string name="publish_disable_video_because_audio">选择语音后不可以选择视频内容</string>
    <string name="publish_disable_audio_because_pic">选择图片后不可以选择语音内容</string>
    <string name="publish_disable_video_because_pic">选择图片后不可以选择视频内容</string>
    <string name="publish_disable_audio_because_video">选择视频后不可以选择语音内容</string>
    <string name="publish_disable_pic_because_video">选择视频后不可以选择图片内容</string>
    <string name="publish_only_one_audio">只能发布1条语音内容哦~</string>
    <string name="detail_description_question_can_get_effective_help">详细描述问题，能获得更有效的解答</string>

    <string name="publish_comment">发表评论…</string>
    <string name="reply_to_prefix">回复 %s：</string>
    <string name="name_colon">%s :</string>
    <string name="send">发表</string>
    <string name="comment_length_count">%s/2000字</string>

    <string name="upload_failed">上传失败</string>
    <string name="upload_time_out">上传超时</string>
    <string name="please_check_network_available">请检查网络连接是否正常</string>
    <string name="cancel_upload">取消上传</string>
    <string name="upload_again">重新发布</string>
    <string name="net_error">网络错误</string>
    <string name="sound_time_too_short">语音时长太短</string>
    <string name="no_album_permission">没有相册权限</string>
    <string name="please_give_permission">没有相应权限</string>
    <string name="record_failed">录制失败</string>
    <string name="please_select_circle">请选择社区</string>
    <string name="please_select_topic">请选择话题</string>
    <string name="comment_input_max_toast">字数超过了2000字限制</string>
</resources>