<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.jxntv.widget.GVideoConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/CenterDialogStyle.Dialog">

        <com.jxntv.widget.GVideoTextView
            android:id="@+id/splash_confirm_title"
            style="@style/CenterDialogStyle.TitleButton"
            android:text="@string/identify_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/splash_dialog_cancel"/>

        <com.jxntv.widget.GVideoButton
            android:id="@+id/splash_dialog_cancel"
            style="@style/CenterDialogStyle.CancelButton"
            android:text="@string/select_cancel"
            app:layout_constraintTop_toBottomOf="@id/splash_confirm_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/splash_dialog_confirm"/>

        <com.jxntv.widget.GVideoButton
            android:id="@+id/splash_dialog_confirm"
            style="@style/CenterDialogStyle.ConfirmButton"
            android:text="@string/identify_ensure"
            app:layout_constraintTop_toBottomOf="@id/splash_confirm_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/splash_dialog_cancel"
            app:layout_constraintRight_toRightOf="parent"/>

    </com.jxntv.widget.GVideoConstraintLayout>
</layout>