<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hzlz.aviation.library.widget.widget.AviationConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_record_dialog_height"
        android:background="@color/color_ffffff">

        <com.hzlz.aviation.library.widget.widget.AviationTextView
            android:id="@+id/record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_record_dialog_title_margin_top"
            android:gravity="center"
            android:text="@string/record_dialog_title"
            android:textColor="@color/color_212229"
            android:textSize="@dimen/fragment_record_dialog_title_text_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hzlz.aviation.library.widget.widget.AviationTextView
            android:id="@+id/record_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_record_dialog_cancel_height"
            android:background="@drawable/center_dialog_button"
            android:gravity="center"
            android:text="@string/record_dialog_cancel"
            android:textColor="@color/color_a1a4b3"
            android:textSize="@dimen/fragment_record_dialog_cancel_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.hzlz.aviation.library.widget.widget.AviationImageView
            android:id="@+id/record_img"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_record_dialog_image_size"
            android:layout_marginTop="@dimen/fragment_record_dialog_image_margin_top"
            android:padding="@dimen/DIMEN_6DP"
            android:src="@drawable/ic_dialog_dynamic"
            android:gravity="center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/live_img"
            app:layout_constraintTop_toBottomOf="@id/record_title" />

        <com.hzlz.aviation.library.widget.widget.AviationImageView
            android:id="@+id/live_img"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_record_dialog_image_size"
            android:padding="@dimen/DIMEN_6DP"
            android:layout_marginTop="@dimen/fragment_record_dialog_image_margin_top"
            android:src="@drawable/ic_dialog_live_enable"
            android:gravity="center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/record_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/record_title" />

        <com.hzlz.aviation.library.widget.widget.AviationTextView
            android:id="@+id/record_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_dialog_moment"
            android:textColor="@color/color_212229"
            android:textSize="@dimen/fragment_record_dialog_item_text_size"
            app:layout_constraintLeft_toLeftOf="@id/record_img"
            app:layout_constraintRight_toRightOf="@id/record_img"
            app:layout_constraintTop_toBottomOf="@id/record_img" />

        <com.hzlz.aviation.library.widget.widget.AviationTextView
            android:id="@+id/live_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_dialog_live"
            android:textColor="@color/color_212229"
            android:textSize="@dimen/fragment_record_dialog_item_text_size"
            app:layout_constraintLeft_toLeftOf="@id/live_img"
            app:layout_constraintRight_toRightOf="@id/live_img"
            app:layout_constraintTop_toBottomOf="@id/live_img" />

    </com.hzlz.aviation.library.widget.widget.AviationConstraintLayout>
</layout>